<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_kp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:stretchColumns="@string/add_kp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_kp_title" />

                    <TextView
                        android:id="@+id/kp_number_kp"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="@string/no_data" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_key_title" />

                    <TextView
                        android:id="@+id/kp_key_type"
                        style="@style/TableLayout_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="20dp"
                        android:text="@string/type_restart_device_title" />

                    <TextView
                        android:id="@+id/kp_type_restart_device"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reserve_modem_title" />

                    <CheckBox
                        android:id="@+id/kp_reserve_modem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reserve_ugzl_title" />

                    <CheckBox
                        android:id="@+id/kp_reserve_ugzl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_mcp_title" />

                    <TextView
                        android:id="@+id/kp_ip_mcp"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_moxa_title" />

                    <TextView
                        android:id="@+id/kp_ip_moxa"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_asmi_title" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/kp_ip_asmi_1"
                            style="@style/TableLayout_TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_data" />

                        <TextView
                            android:id="@+id/kp_ip_asmi_2"
                            style="@style/TableLayout_TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_data" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_asmi_shos_title" />

                    <TextView
                        android:id="@+id/kp_ip_asmi_shos"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:maxWidth="20dp"
                        android:text="@string/location_asmi_shos_title" />

                    <TextView
                        android:id="@+id/kp_location_asmi_shos"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_moxa_shos_title" />

                    <TextView
                        android:id="@+id/kp_ip_moxa_shos"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_first_zelax_title" />

                    <TextView
                        android:id="@+id/kp_ip_first_zelax"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:maxWidth="20dp"
                        android:text="@string/forward_first_zelax_title" />

                    <TextView
                        android:id="@+id/kp_forward_first_zelax"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_second_zelax_title" />

                    <TextView
                        android:id="@+id/kp_ip_second_zelax"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:maxWidth="20dp"
                        android:text="@string/forward_second_zelax_title" />

                    <TextView
                        android:id="@+id/kp_forwaed_second_zelax"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="20dp"
                        android:text="@string/type_relay_title" />

                    <TextView
                        android:id="@+id/kp_type_relay"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="20dp"
                        android:text="@string/count_destroy" />

                    <TextView
                        android:id="@+id/kp_count_destroy"
                        style="@style/TableLayout_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/kp_show_table_tu_ts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_show_table_tu_ts"
                android:text="@string/show_table_tu_ts" />

            <Button
                android:id="@+id/kp_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_kp_gps"
                android:text="@string/add_gps" />

            <Button
                android:id="@+id/kp_add_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_add_images"
                android:text="@string/add_images" />

            <Button
                android:id="@+id/kp_show_work_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_show_work_log"
                android:text="@string/show_work_log" />

            <Button
                android:id="@+id/kp_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_edit"
                android:text="@string/edit" />

            <Button
                android:id="@+id/kp_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="kp_click_delete"
                android:text="@string/delete" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>